--- a/blogs.html
+++ b/blogs.html
@@ -14,7 +14,6 @@
 	<link rel="stylesheet" href="styles.css">
 	<link rel="icon" type="image/png" href="logos/b.png" sizes="32x32">
   	<script src="styles.js"></script>
-
 </head>
 
 
@@ -27,14 +26,13 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-	
-	<a href="solarcar.html">Solar Car Racing Team</a>
-	<a href="ewb.html">Engineers Without Borders</a>
-	<a href="ilead.html">iLead The Game, University of Toronto</a>
-	<a href="fes.html">Future Engineers Society, Earl Haig Secondary School</a>
-	<a href="weather.html">Earth Sciences Hobby Research</a>
-	<a href="deep.html">DEEP Summer Academy, University of Toronto</a>
-	<a href="swim.html">Swimming and Lifeguarding</a>
+		<a href="solarcar.html">Solar Car Racing Team</a>
+		<a href="ewb.html">Engineers Without Borders</a>
+		<a href="ilead.html">iLead The Game, University of Toronto</a>
+		<a href="fes.html">Future Engineers Society, Earl Haig Secondary School</a>
+		<a href="weather.html">Earth Sciences Hobby Research</a>
+		<a href="deep.html">DEEP Summer Academy, University of Toronto</a>
+		<a href="swim.html">Swimming and Lifeguarding</a>
     </div>
   </div> 
   <div class="dropdown">
@@ -44,13 +42,13 @@
     <div class="dropdown-content">
         <a href="mi.html">Machine Learning Projects</a>
 		<a href="research.html">Transportation Modelling Research</a>
-	<a href="https://devpost.com/software/chinabridge">Content Hosting App</a>
-	<a href="https://devpost.com/software/surroundsound-1u9ljk">Music Sharing App</a>
-	<a href="game.html">Boxhead Video Game</a>
-	<a href="parking.html">Parking Manager App Simulator</a>
-	<a href="aer201.html">Autonomous Pill Packaging Machine</a>
-	<a href="praxis.html">ESC101/102 - Praxis I + II</a>
-	<a href="civ102.html">CIV102 - Structures and Materials</a>
+		<a href="https://devpost.com/software/chinabridge">Content Hosting App</a>
+		<a href="https://devpost.com/software/surroundsound-1u9ljk">Music Sharing App</a>
+		<a href="game.html">Boxhead Video Game</a>
+		<a href="parking.html">Parking Manager App Simulator</a>
+		<a href="aer201.html">Autonomous Pill Packaging Machine</a>
+		<a href="praxis.html">ESC101/102 - Praxis I + II</a>
+		<a href="civ102.html">CIV102 - Structures and Materials</a>
     </div>
   </div>
   <div class="button"><a href="overview.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">About Me</a></div>
@@ -71,20 +69,47 @@
 <h1>Blog Posts</h1>
 
 <!--Table of Contents-->
+
 <div id="toc_container">
   <p class="toc_title">Table of Contents</p>
   <ul class="toc_list">
-  <li><a href="#20171204">Dec. 4, 2017: The Missing Technological Link to Renewable Energy Systems and Replacing Fossil Fuels</a></li>
-  <li><a href="#20171009">Oct. 19, 2017: The Ethics of Solar Power Technology</a></li>
-  <li><a href="#20170224">Feb. 24, 2017: Personal Engineering Design Process</a></li>
-  <li><a href="#20170130">Jan. 30, 2017: Engineering Science Education Conference (ESEC) Lecture Extension - Can Artificial Intelligence Win the Traffic Game?</a></li>
-  <li><a href="#20161116">Nov. 16, 2016: An Application of Engineering Thinking in Daily Life - Choice of Workout Location</a></li>
-  <li><a href="#20161025">Oct. 25, 2016: Design for X Walkabout - The Improved Design of iPhone 7/7+ for Durability</a></li>
-  <li><a href="#20160929">Sep. 29, 2016: Praxis I Lecture Extension - Use Wikipedia for Research?</a></li>
+  	  <li><a href="#20181107">Nov. 7, 2018: Are credit-ranking systems inherently unethical?</a></li>
+	  <li><a href="#20171204">Dec. 4, 2017: The Missing Technological Link to Renewable Energy Systems and Replacing Fossil Fuels</a></li>
+	  <li><a href="#20171009">Oct. 19, 2017: The Ethics of Solar Power Technology</a></li>
+	  <li><a href="#20170224">Feb. 24, 2017: Personal Engineering Design Process</a></li>
+	  <li><a href="#20170130">Jan. 30, 2017: Engineering Science Education Conference (ESEC) Lecture Extension - Can Artificial Intelligence Win the Traffic Game?</a></li>
+	  <li><a href="#20161116">Nov. 16, 2016: An Application of Engineering Thinking in Daily Life - Choice of Workout Location</a></li>
+	  <li><a href="#20161025">Oct. 25, 2016: Design for X Walkabout - The Improved Design of iPhone 7/7+ for Durability</a></li>
+	  <li><a href="#20160929">Sep. 29, 2016: Praxis I Lecture Extension - Use Wikipedia for Research?</a></li>
 </ul>
 </div>
 
-<img src="pics/power lines.jpg" alt="Power Lines" style="width:100%;">
+<img src="pics/credit.jpg" alt="Power Lines" style="width:80%;">
+
+<h2 id="20181107">Are credit-ranking systems inherently unethical?</h2>
+
+<p>In a world dominated by artificial intelligence, it is common for data-driven algorithms to replace human decision-making. However, it has been revealed that in many applications, the composition of data used by the algorithms can skew their decisions, thus marginalizing some under-represented or disadvantaged groups in the data. This results in unethical decisions being made that reinforces stereotypes and systematic discrimination. </p>
+
+<p>One example is banks using algorithms to determine credit scores of individual borrowers when lending money. It is important since people often need to borrow money to make large purchases or start businesses. A lower credit score will prevent some from these opportunities to improve their standard of living, thus widening the economic gap [1]. Even though it is illegal to take race into account of credit, studies have shown that there is a great disparity in average credit scores between races [2]. This is mainly caused by factors used to determine credit scores, such as income, debt, family credit history, and location. These factors often reflect deep racial trends (for instance, poorer neighborhoods dominated by African Americans have lower income and higher debt), resulting in lower credit scores for these people [1]. These marginalized groups are thus given less opportunity to improve their situations (for instance, less loans to receive higher education or to start a business), which reinforces their marginalization. This results in a feedback loop that is systemically discriminating and widens the economic gap between groups.</p>
+
+<p>Furthermore, based on the example of bank credit scores, it could be shown that all types of credit-ranking algorithms are inherently discriminatory and unethical. In some countries, in addition to collecting the information listed above, other information such as social media accounts, cellphone data, and work performance are collected [3]. They can also impact other areas in addition to taking loans. China’s infamous social credit system, for example, takes information including public behavior and internet activity into account, and can impact a person’s travel privileges and internet access [3]. In general, the more factors that an algorithm takes into calculating a person’s credit score, the more barriers it presents to certain groups from becoming unmarginalized. This then creates a greater obstacle from achieving social equality. By utilitarian ethics, this lack of equality in opportunity results in less overall benefit for the society by reinforcing these societal divisions and giving less freedom to the people [4]. Even though efforts are underway to reduce systemic discrimination in credit-ranking systems by making them government-run, the global shift towards a free market could undo these efforts [3].</p>
+
+<p>Overall, the design of credit-ranking systems only strengthens existing stereotypes and bias between different social groups by considering factors that first created these differences. This design flaw makes it inherently unethical, by reducing overall freedom and equal access to opportunity for these marginalized groups. There are countless other examples where flawed data collection results in unjust decisions made by data-driven algorithms. As the world enters the age of machine intelligence, the possibilities presented in Black Mirror could become reality.</p>
+ 
+<br>
+<b>References</b><br>
+
+[1] "Are Credit Scores Racist? | Fiscal Tiger", Fiscal Tiger | A Resource for Personal Finance and Credit Card, 2018. [Online]. Available: https://www.fiscaltiger.com/are-credit-scores-racist/. [Accessed: 08- Nov- 2018].<br>
+
+[2] T. E.&nbsp; Holmes, "Credit card race, age, gender statistics", CreditCards.com, 2018. [Online]. Available: https://www.creditcards.com/credit-card-news/race-age-gender-statistics.php. [Accessed: 08- Nov- 2018].<br>
+
+[3] K. Waddell, "How Algorithms Can Bring Down Minorities' Credit Scores", The Atlantic, 2018. [Online]. Available: https://www.theatlantic.com/technology/archive/2016/12/how-algorithms-can-bring-down-minorities-credit-scores/509333/. [Accessed: 08- Nov- 2018].<br>
+
+[4] "Utilitarianism - Ethics Unwrapped", Ethics Unwrapped, 2018. [Online]. Available: https://ethicsunwrapped.utexas.edu/glossary/utilitarianism. [Accessed: 08- Nov- 2018].<br>
+<br><br>
+
+
+<img src="pics/power lines.jpg" alt="Power Lines" style="width:80%;">
 
 <h2 id="20171204">The Missing Technological Link to Renewable Energy Systems and Replacing Fossil Fuels</h2>
 
@@ -110,8 +135,7 @@ the demand when supply "entities" are inconsistent, if there is nowhere for extr
 
 <p>If implemented, LMBs would drastically change the energy industry, and render the world more utilitarian. Due to its low cost and high performance compared to fossil fuels, consumers, especially those in the capitalist world, would be more inclined to use renewable energy. Amid the United States' withdrawal from the Paris Climate Accord due to economic concerns [12], LMB technology, combined with renewable energy systems, could provide the U.S. a feasible solution for it to take initiative on phasing out fossil fuels and reducing carbon emissions. Although the traditional energy industry may suffer from these changes, the general public would benefit from greatly benefit from lower energy costs, more independence on energy supply (instead of importing), and cleaner environment from reduction of carbon emissions. This is utilitarian, since it creates "greater happiness" for the "greater majority" [13]. Furthermore, the increased use of renewable energy made possible by LMBs would result in less regional or global energy shortages, and less conflicts related to energy resources [1]. This impact is also utilitarian. All these benefits associated with the LMB demonstrates that it fulfils the missing technological link to promoting renewable energy and phasing out fossil fuels.</p>
 
-<p>A lot more technological, political, and economic progress still needs to be made before fossil fuels can be fully phased out by renewable energy. Yet, the liquid metal battery fulfills a
-key role of a cost-efficient and high-performance energy storage in the "actor network" of renewable energy systems. This is made possible by its special chemical properties and innovative design from Ambri, which makes the LMB better than fossil fuels in terms of performance and cost. When implemented, the LMB could have positive impacts on not only the energy consumers, but also for maintaining the world energy stability, and mitigating man-made climate change. The liquid metal battery is the missing technological link to renewable energy systems and replacing fossil fuels.</p>
+<p>A lot more technological, political, and economic progress still needs to be made before fossil fuels can be fully phased out by renewable energy. Yet, the liquid metal battery fulfills a key role of a cost-efficient and high-performance energy storage in the "actor network" of renewable energy systems. This is made possible by its special chemical properties and innovative design from Ambri, which makes the LMB better than fossil fuels in terms of performance and cost. When implemented, the LMB could have positive impacts on not only the energy consumers, but also for maintaining the world energy stability, and mitigating man-made climate change. The liquid metal battery is the missing technological link to renewable energy systems and replacing fossil fuels.</p>
 
 <br>
 <b>References</b><br>
@@ -136,7 +160,7 @@ https://electrek.co/2016/10/31/tesla-powerwall-2-comparison-lg-resu-sonnenbatter
 
 
 
-<img src="pics/solar panel.jpg" alt="Solar Power" style="width:100%;">
+<img src="pics/solar panel.jpg" alt="Solar Power" style="width:80%;">
 
 <h2 id="20171019">The Ethics of Solar Power Technology</h2>
 
