--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@ input[type=submit]:hover {
 
 .container {
     border-radius: 5px;
-    background-color: #d9d9d9;
+    background-color: #cccccc;
     padding: 20px;
 }
 </style>
@@ -58,14 +58,13 @@ input[type=submit]:hover {
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-	
-	<a href="solarcar.html">Solar Car Racing Team</a>
-	<a href="ewb.html">Engineers Without Borders</a>
-	<a href="ilead.html">iLead The Game, University of Toronto</a>
-	<a href="fes.html">Future Engineers Society, Earl Haig Secondary School</a>
-	<a href="weather.html">Earth Sciences Hobby Research</a>
-	<a href="deep.html">DEEP Summer Academy, University of Toronto</a>
-	<a href="swim.html">Swimming and Lifeguarding</a>
+    	<a href="solarcar.html">Solar Car Racing Team</a>
+    	<a href="ewb.html">Engineers Without Borders</a>
+    	<a href="ilead.html">iLead The Game, University of Toronto</a>
+    	<a href="fes.html">Future Engineers Society, Earl Haig Secondary School</a>
+    	<a href="weather.html">Earth Sciences Hobby Research</a>
+    	<a href="deep.html">DEEP Summer Academy, University of Toronto</a>
+    	<a href="swim.html">Swimming and Lifeguarding</a>
     </div>
   </div> 
   <div class="dropdown">
@@ -74,14 +73,14 @@ input[type=submit]:hover {
     </button>
     <div class="dropdown-content">
         <a href="mi.html">Machine Learning Projects</a>
-		<a href="research.html">Transportation Modelling Research</a>
-	<a href="https://devpost.com/software/chinabridge">Content Hosting App</a>
-	<a href="https://devpost.com/software/surroundsound-1u9ljk">Music Sharing App</a>
-	<a href="game.html">Boxhead Video Game</a>
-	<a href="parking.html">Parking Manager App Simulator</a>
-	<a href="aer201.html">Autonomous Pill Packaging Machine</a>
-	<a href="praxis.html">ESC101/102 - Praxis I + II</a>
-	<a href="civ102.html">CIV102 - Structures and Materials</a>
+    		<a href="research.html">Transportation Modelling Research</a>
+    	<a href="https://devpost.com/software/chinabridge">Content Hosting App</a>
+    	<a href="https://devpost.com/software/surroundsound-1u9ljk">Music Sharing App</a>
+    	<a href="game.html">Boxhead Video Game</a>
+    	<a href="parking.html">Parking Manager App Simulator</a>
+    	<a href="aer201.html">Autonomous Pill Packaging Machine</a>
+    	<a href="praxis.html">ESC101/102 - Praxis I + II</a>
+    	<a href="civ102.html">CIV102 - Structures and Materials</a>
     </div>
   </div>
   <div class="button"><a href="overview.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">About Me</a></div>
@@ -105,16 +104,16 @@ input[type=submit]:hover {
 
 <div class="container">
   <form action="/action_page.php">
-    <label for="fname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+    <label for="fname">Name</label>
+    <input type="text" id="name" name="name" placeholder="Your name..">
 
-    <label for="lname">Last Name</label>
-    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+    <label for="lname">Email</label>
+    <input type="text" id="email" name="email" placeholder="Your email..">
 
-    <label for="company">Company</label>
-    <input type="text" id="company" name="company" placeholder="Your company..">
+    <label for="company">Telephone</label>
+    <input type="text" id="number" name="number" placeholder="Your phone number..">
 
-    <label for="subject">Subject</label>
+    <label for="subject">Your Message</label>
     <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
 
     <input type="submit" value="Submit">
