--- a/mi.html
+++ b/mi.html
@@ -67,17 +67,27 @@
 <h3>University of Toronto</h3><br>
 
 <h2>MIE324 Introduction to Machine Intelligence Course</h2>
-<h4>Assignment 1:</h4>
+<h3>Cats and dogs (Assignment 1):</h3>
 <p>Training a convolutional neural network (CNN) to classify images of cats and dogs</p>
 
-<h4>Assignment 2:</h4>
-<p>Coding and training a multilayer perceptron (MLP) neural network to classify income based on individual stats</p>
+<h3>Income prediction (Assignment 2):</h3>
+<p>Coding and training a multilayer perceptron (MLP) neural network to classify income based on individual statistics</p>
 
-<h4>Assignment 3:</h4>
-<p>Coding and training a CNN to identify smartphone hand gestures</p>
+<h3>Mobile phone gesture identification (Assignment 3):</h3>
+<p>-Utilizes deep learning and convolutional neural networks to process gyroscope data from mobile phones <br>
+-Built and created own dataset based on data collected in class <br>
+-Achieves 85% accuracy in identifying different phone movements <br>
+-Uses Python, PyTorch, Pandas, and Sk-learn</p>
 
-<h4>Final Project:</h4>
-<p>TBD</p>
+<h3>Natural language processing (Assignment 4):</h3>
+<p>-Utilizes a recurrent neural network (RNN) and a CNN to identify objective vs. subjective sentences <br>
+-Achieves 92% accuracy</p>
+
+<h3>Music genre classifier (Final project):</h3>
+<p>-Classify music genres from audio utilizing a CNN<br>
+-Collected and processed song data from the Million Songs dataset<br> 
+-Uses Python, PyTorch, Pandas, and Sk-learn<br>
+-Repo link: <a href="https://github.com/billyhsun/MusicGenre">github.com/billyhsun/MusicGenre</a></p>
 
 <p><a href="https://github.com/billyhsun/Introduction-to-Machine-Intelligence-Course">GitHub repo</a></p><br>
 
