--- a/overview.html
+++ b/overview.html
@@ -12,6 +12,7 @@
   	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<link rel="stylesheet" href="styles.css">
 	<link rel="icon" type="image/png" href="logos/b.png" sizes="32x32">
+	<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
   	<script src="styles.js"></script>
 
 </head>
@@ -57,25 +58,16 @@
   </div>
 </div>
 
-<div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:500px;">
-<body style="background-color:#ccccff;">
+<div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:450px;">
+<body style="background-color:#333333;">
+
 
 <!--Main-->
 <title>About Me - Bill Sun</title>
 
-<!--Table of Contents-->
-<div id="toc_container">
-  <p class="toc_title">Table of Contents</p>
-  <ul class="toc_list">
-  <li><a href="#skills">Skills Summary</a></li>
-  <li><a href="#exp">Experience Highlight</a></li>
-  <li><a href="#summary">Personal Summary</a></li>
-</ul>
-</div>
+<h1 style="text-align:center;">About Me</h1><br>
 
-<h1>Overview</h1><br>
-
-<h2 id="skills">Skills Summary</h2>
+<h2 id="skills" style="text-align:center;">Skills Summary</h2>
 <style>
 box{
      font-size: 15px; 
@@ -84,56 +76,57 @@ box{
      height: 29px;
      text-align: center;
 }
+
+p{
+	color: white;
+}
+h1{
+	color: white;
+}
+h2{
+	color: white;
+}
+h3{
+	color: white;
+}
 </style>
+<br>
 
-<p><b>Legend: </b>
-<box style="color:white;background-color:#01700c">Experienced / Proficient</box> 
-<box style="color:black;background-color:#3bf934">Familiar / Conversant</box> 
-<box style="color:black;background-color:#ffff0f">Beginner / Novice</box> 
-</p><br>
+<p><b>○ Software: </b>  
+<img src="logos/python.png" alt="Python" width=50>
+<img src="logos/c.png" alt="Python" width=50>
+<img src="logos/cpp.png" alt="Python" width=50>
+<img src="logos/js.png" alt="Python" width=50>
+<img src="logos/nodejs.png" alt="Python" width=50>
+<img src="logos/java.png" alt="Python" width=50>
+<img src="logos/html.png" alt="Python" width=50>
+<img src="logos/css.png" alt="Python" width=50>
+</p>
 
-<p><b>○ Software:</b>  	<box style="color:white;background-color:#01700c">Python</box>
-			<box style="color:black;background-color:#3bf934">C++</box>
-			<box style="color:black;background-color:#3bf934">C</box> 
-			<box style="color:black;background-color:#3bf934">HTML & CSS</box>
-			<box style="color:black;background-color:#3bf934">Javascript</box>
-			<box style="color:black;background-color:#ffff0f">React Native</box></p>
-
-<p><b>○ Hardware:</b> 	<box style="color:black;background-color:#3bf934">Circuits</box>
-			<box style="color:black;background-color:#3bf934">Electromagnetism</box>
-			<box style="color:black;background-color:#ffff0f">Verilog</box> 
-			<box style="color:black;background-color:#ffff0f">ARM Assembly</box>
-
-<p><b>○ Data Analysis / Management:</b>	<box style="color:white;background-color:#01700c">Microsoft Excel</box> 
-					<box style="color:white;background-color:#01700c">Statistics</box>
-					<box style="color:black;background-color:#3bf934">MATLAB</box>
-					<box style="color:black;background-color:#ffff0f">SAS</box> 
-					<box style="color:black;background-color:#ffff0f">SQL</box> 
-					<box style="color:black;background-color:#ffff0f">AWS (Amazon Web Services)</box> 
-
-<p><b>○ Design Tools:</b> <box style="color:white;background-color:#01700c">Technical Drawings</box>
-			<box style="color:black;background-color:#3bf934">AutoCAD</box>
-			<box style="color:black;background-color:#ffff0f">SolidWorks</box></p>
+<!--#3bf934, #ffff0f-->
+<p><b>○ Data Analysis:</b>	<box style="color:white;background-color:#01700c">Microsoft Excel</box> 
+					<box style="color:white;background-color:#01700c">MATLAB</box>
+					<box style="color:white;background-color:#01700c">SAS</box> 
+					<box style="color:white;background-color:#01700c">SQL</box> 
+					<box style="color:white;background-color:#01700c">AWS (Amazon Web Services)</box> 
+					<box style="color:white;background-color:#01700c">Google Cloud</box> 
 
 <p><b>○ Engineering Design:</b> <box style="color:white;background-color:#01700c">Engineering Design Process</box>
 				<box style="color:white;background-color:#01700c">Prototyping</box>
-				<box style="color:black;background-color:#3bf934">Design Selection</box>
-				<box style="color:black;background-color:#3bf934">Testing Protocols</box>
+				<box style="color:white;background-color:#01700c">Agile Methodology</box>
+				<box style="color:white;background-color:#01700c">Testing Protocols</box>
 
 <p><b>○ Leadership:</b> <box style="color:white;background-color:#01700c">Organization</box>
 			<box style="color:white;background-color:#01700c">Time Management</box>
 			<box style="color:white;background-color:#01700c">Teamwork</box>
 			<box style="color:white;background-color:#01700c">Communication</box>
-
-<p><b>○ Research:</b> <a href="research.html">Research project on transit modelling</a>; Personal research projects in earth sciences.</p>
-
-<p><b>○ Foreign Languages:</b> <box style="color:white;background-color:#01700c">Mandarin Chinese</box></p>
+			<box style="color:white;background-color:#01700c">Mentoring</box>
 
 <br> 
 </div>
 <div style="padding: 0% 10% 0% 10%; margin-top:50px; min-height:700px;">
 
-<h2 id="exp">Experience Highlight</h2>
+<h2 id="exp" style="text-align:center;">Experience Highlight</h2>
 
     <figure class="item">
     	<a href="research.html" target="_blank"><img src="pics/transit2.png" alt="portfolio item" width=400 height=250></a>
@@ -192,7 +185,7 @@ box{
 
 <div style="padding: 0% 10% 0% 10%; margin-top:50px; min-height:500px;">
 
-<h2 id="summary">Personal Statement</h2>
+<h2 id="summary" style="color:#FFFFFF; text-align:center;">Personal Statement</h2>
 <h3>Why Engineering Science?</h3>
 <p>I have been interested in engineering at a young age. I have been fascinated by machines, electronics, and transportation equipment. I also tried to copy my father’s technical drawings for fun. When I was taught visual arts, I learned how to represent and express my ideas in a unique manner. After I moved to Canada in 8th grade, and went through the struggles of being an immigrant, I realized the importance of helping out people in need. Incorporating my strengths in math and sciences, as well as my interest in design and research, I decided to peruse in engineering sciences.</p>
 
