--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:375px;">
 
 <h1>About this portfolio</h1>
-<p style="font-size: 18px;">Entirely designed and built by myself, this is a portfolio of my skills, experiences, and insights. It includes coursework and projects in engineering, coding, and design, extracurricular activities, and my reflections in engineering design, as well as applying engineering in daily life.</p>
+<p style="font-size: 18px;">Entirely designed and built by myself, this is a portfolio of my skills, experiences, and insights. It includes coursework and projects in engineering, coding, and design, extracurricular activities, and my reflections in engineering design, as well as applying engineering in daily life. This website is continuously being updated as I finish new projects and make improvements to the website design. </p>
 
 <p style="font-size: 18px;">Please use the menu bar at the top to navigate this portfolio. Thank you for viewing!</p>
 <br>
