--- a/overview.html
+++ b/overview.html
@@ -59,7 +59,7 @@
 </div>
 
 <div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:450px;">
-<body style="background-color:#333333;">
+<body style="background-color:#ccccff;">
 
 
 <!--Main-->
@@ -94,12 +94,13 @@ h3{
 
 <p><b>○ Software: </b>  
 <img src="logos/python.png" alt="Python" width=50>
+<img src="logos/java.png" alt="Python" width=50>
 <img src="logos/c.png" alt="Python" width=50>
 <img src="logos/cpp.png" alt="Python" width=50>
 <img src="logos/js.png" alt="Python" width=50>
 <img src="logos/nodejs.png" alt="Python" width=50>
-<img src="logos/java.png" alt="Python" width=50>
 <img src="logos/html.png" alt="Python" width=50>
+<img src="logos/css3.png" alt="Python" width=50>
 <img src="logos/css.png" alt="Python" width=50>
 </p>
 
