--- a/overview.html
+++ b/overview.html
@@ -59,7 +59,7 @@
 </div>
 
 <div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:450px;">
-<body style="background-color:#ccccff;">
+<body style="background-color:#333333;">
 
 
 <!--Main-->
