--- a/mi.html
+++ b/mi.html
@@ -39,15 +39,16 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-        <a href="mi.html">Machine Learning Projects</a>
-		<a href="research.html">Transportation Modelling Research</a>
-		<a href="https://devpost.com/software/chinabridge">Content Hosting App</a>
-		<a href="https://devpost.com/software/surroundsound-1u9ljk">Music Sharing App</a>
-		<a href="game.html">Boxhead Video Game</a>
-		<a href="parking.html">Parking Manager App Simulator</a>
-		<a href="aer201.html">Autonomous Pill Packaging Machine</a>
-		<a href="praxis.html">ESC101/102 - Praxis I + II</a>
-		<a href="civ102.html">CIV102 - Structures and Materials</a>
+        <a href="https://github.com/billyhsun/MusicGenre">Music Genre Classifier</a>
+    		<a href="https://github.com/billyhsun/Deep-Learning-Projects">Other Machine Learning Projects</a>
+    		<a href="research.html">Transportation Modelling Research</a>
+    		<a href="https://devpost.com/software/chinabridge">Content Hosting App</a>
+    		<a href="https://devpost.com/software/surroundsound-1u9ljk">Music Sharing App</a>
+    		<a href="game.html">Boxhead Video Game</a>
+    		<a href="parking.html">Parking Manager App Simulator</a>
+    		<a href="aer201.html">Autonomous Pill Packaging Machine</a>
+    		<a href="praxis.html">ESC101/102 - Praxis I + II</a>
+    		<a href="civ102.html">CIV102 - Structures and Materials</a>
     </div>
   </div>
   <div class="button"><a href="overview.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">About Me</a></div>
