--- a/overview.html
+++ b/overview.html
@@ -41,7 +41,8 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-        <a href="mi.html">Machine Learning Projects</a>
+        <a href="https://github.com/billyhsun/MusicGenre">Music Genre Classifier</a>
+		<a href="https://github.com/billyhsun/Deep-Learning-Projects">Other Machine Learning Projects</a>
 		<a href="research.html">Transportation Modelling Research</a>
 		<a href="https://devpost.com/software/chinabridge">Content Hosting App</a>
 		<a href="https://devpost.com/software/surroundsound-1u9ljk">Music Sharing App</a>
