--- a/overview.html
+++ b/overview.html
@@ -131,6 +131,14 @@ h3{
 <h2 id="exp" style="text-align:center;">Experience Highlight</h2>
 
     <figure class="item">
+	<a href="https://github.com/billyhsun/MusicGenre" target="_blank"><img src="pics/musicgenre.png" alt="portfolio item" width=400 height=250></a>
+	<figcaption class= "desc">
+	    <p><font color="white"><strong>Music Genre Classifier</strong></font></p>
+	    <p><font color="white">Deep Learning Project</font></p>
+	</figcaption>
+    </figure>
+
+    <figure class="item">
     	<a href="research.html" target="_blank"><img src="pics/transit2.png" alt="portfolio item" width=400 height=250></a>
     	<figcaption class= "desc">
 	    <p><font color="white"><strong>Transit Modelling Research</strong></font></p>
@@ -139,7 +147,7 @@ h3{
     </figure>
 
     <figure class="item">
-	<a href="https://devpost.com/software/chinabridge" target="_blank"><img src="pics/chinabridge.jpg" alt="portfolio item" width=400 height=250></a>
+	<a href="https://devpost.com/software/chinabridge" target="_blank"><img src="pics/chinabridge.jpg" alt="portfolio item" width=350 height=250></a>
 	<figcaption class= "desc">
 	    <p><font color="white"><strong>Content Hosting Application</strong></font></p>
 	    <p><font color="white">Toronto Chinese Gospel Church</font></p>
@@ -150,15 +158,7 @@ h3{
 	<a href="boxhead.html" target="_blank"><img src="pics/game1.png" alt="portfolio item" width=400 height=250></a>
 	<figcaption class= "desc">
 	    <p><font color="white"><strong>Boxhead Video Game</strong></font></p>
-	    <p><font color="white">ICS3U-Computer Programming, Earl Haig Secondary School</font></p>
-	</figcaption>
-    </figure>
-
-    <figure class="item">
-	<a href="parking.html" target="_blank"><img src="pics/parksmart.png" alt="portfolio item" width=400 height=250></a>
-	<figcaption class= "desc">
-	    <p><font color="white"><strong>Parking Manager Application Simulator</strong></font></p>
-	    <p><font color="white">ICS4U-Computer Programming, Earl Haig Secondary School</font></p>
+	    <p><font color="white">Python Programming Project</font></p>
 	</figcaption>
     </figure>
 
