--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <h1 style="font-size: 40px;">Welcome!</h1><br>
 
-<p style="font-size: 18px;">My name is Bill (Yuan Hong) Sun, and I am a third-year <a href="http://engsci.utoronto.ca/explore_our_program/about_engsci/">Engineering Science</a> student at University of Toronto, majoring in <a href="http://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">Machine Intelligence</a>. I am interested in full-stack software development, big data, and machine learning.</p> 
+<p style="font-size: 18px;">My name is Bill (Yuan Hong) Sun, and I am a third-year <a href="http://engsci.utoronto.ca/explore_our_program/about_engsci/">Engineering Science</a> student at University of Toronto, majoring in <a href="http://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">Machine Intelligence</a>. I am interested in full-stack software development, machine learning, and data science.</p> 
 
 </div>
 
