--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     </button>
     <div class="dropdown-content">
       <a href="https://github.com/billyhsun/MusicGenre">Music Genre Classifier</a>
-		<a href="https://github.com/billyhsun/Deep-Learning-Projects">Other Machine Learning Projects</a>
-		  <a href="research.html">Transportation Modelling Research</a>
+	<a href="https://github.com/billyhsun/Deep-Learning-Projects">Other Machine Learning Projects</a>
+	<a href="research.html">Transportation Modelling Research</a>
     	<a href="https://devpost.com/software/chinabridge">Content Hosting App</a>
     	<a href="https://devpost.com/software/surroundsound-1u9ljk">Music Sharing App</a>
     	<a href="game.html">Boxhead Video Game</a>
@@ -69,7 +69,7 @@
 
 <h1 style="font-size: 40px;">Welcome!</h1><br>
 
-<p style="font-size: 18px;">My name is Bill (Yuan Hong) Sun, and I am a third-year <a href="http://engsci.utoronto.ca/explore_our_program/about_engsci/">Engineering Science</a> student at University of Toronto, majoring in <a href="http://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">Machine Intelligence</a>. I am interested in full-stack software development, machine learning, and data science.</p> 
+<p style="font-size: 18px;">My name is Bill (Yuan Hong) Sun, and I am a third-year <a href="http://engsci.utoronto.ca/explore_our_program/about_engsci/">Engineering Science</a> student at University of Toronto, majoring in <a href="http://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">Machine Intelligence</a>. I am interested in machine learning, data science, and software development in this area.</p> 
 
 </div>
 
