--- a/index.html
+++ b/index.html
@@ -17,72 +17,35 @@
 
 </head>
 
-<!--Menu-->
-<div class="navbar" style="z-index: 2;">
-  <div class="button"><a href="contact.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Contact</a></div>
-  <div class="button"><a href="blogs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Blog</a></div>
-  <div class="dropdown">
-    <button class="dropbtn"><a href="clubs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Extracurriculars</a>
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-    	<a href="solarcar.html">Solar Car Racing Team</a>
-    	<a href="ewb.html">Engineers Without Borders</a>
-    	<a href="ilead.html">iLead The Game, University of Toronto</a>
-    	<a href="fes.html">Future Engineers Society, Earl Haig Secondary School</a>
-    	<a href="weather.html">Earth Sciences Hobby Research</a>
-    	<a href="deep.html">DEEP Summer Academy, University of Toronto</a>
-    	<a href="swim.html">Swimming and Lifeguarding</a>
-    </div>
-  </div> 
-  <div class="dropdown">
-    <button class="dropbtn"><a href="projects.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Projects</a>
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="https://github.com/billyhsun/MusicGenre">Music Genre Classifier</a>
-	<a href="https://github.com/billyhsun/Deep-Learning-Projects">Other Machine Learning Projects</a>
-	<a href="research.html">Transportation Modelling Research</a>
-    	<a href="https://devpost.com/software/chinabridge">Content Hosting App</a>
-    	<a href="https://devpost.com/software/surroundsound-1u9ljk">Music Sharing App</a>
-    	<a href="game.html">Boxhead Video Game</a>
-    	<a href="parking.html">Parking Manager App Simulator</a>
-    	<a href="aer201.html">Autonomous Pill Packaging Machine</a>
-    	<a href="praxis.html">ESC101/102 - Praxis I + II</a>
-    	<a href="civ102.html">CIV102 - Structures and Materials</a>
-    </div>
-  </div>
-    <div class="button"><a href="overview.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">About Me</a></div>
-    <div class="logo"><h1 style="margin:1px;">
-  	<a href="index.html" style="text-decoration: none;">bill.</a></h1>
-  </div>
-</div>
 
-<div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:425px;">
+<div style="padding: 0% 10% 0% 10%; margin-top:50px; min-height:425px;">
 <body background="pics/toronto1.png">
+
 
 <!--Main-->
 <title>Bill Sun's Portfolio</title>
 </head>
 
-<img src="pics/portrait1.jpg" alt="Portrait" align = "right" width = 300 style="margin-left: 50px; margin-bottom: 30px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
-
-<h1 style="font-size: 40px;">Welcome!</h1><br>
-
-<p style="font-size: 18px;">My name is Bill (Yuan Hong) Sun, and I am a third-year <a href="http://engsci.utoronto.ca/explore_our_program/about_engsci/">Engineering Science</a> student at University of Toronto, majoring in <a href="http://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">Machine Intelligence</a>. I am interested in machine learning, data science, and software development in this area.</p> 
-
+<div class="box">
+  <img src="pics/portrait1.jpg" alt="" class="box-img">
+<h1>
+Bill Yuan Hong Sun</h1>
+<h5>
+Machine Learning and Software Engineer</h5>
+<p>
+I am currently a third-year <a href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">Machine Learning and Artificial Intelligence</a> student @ University of Toronto. 
+This portfolio is a showcase of my skills, projects, and insights. Have a look!
+</p>
+<ul>
+<li><a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+<li><a href="https://github.com/billyhsun"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
+</ul>
+<button><a href="overview.html">About</a></button>
+<button><a href="projects.html">Projects</a></button>
+<button><a href="files/Bill-Yuan-Hong-Sun-Resume-1.pdf">Résumé</a></button>
+<button><a href="blogs.html">Blogs</a></button>
 </div>
 
-
-<div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:375px;">
-
-<h1>About this portfolio</h1>
-<p style="font-size: 18px;">Entirely designed and built by myself, this is a portfolio of my skills, experiences, and insights. It includes coursework and projects in engineering, coding, and design, extracurricular activities, and my reflections in engineering design, as well as applying engineering in daily life. This website is continuously being updated as I finish new projects and make improvements to the website design. </p>
-
-<p style="font-size: 18px;">Please use the menu bar at the top to navigate this portfolio. Thank you for viewing!</p>
-<br>
-
-</div>
 
 <!--Footer-->
 <div class="footer">
