--- a/overview.html
+++ b/overview.html
@@ -8,11 +8,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Bill Sun's Personal Portfolio">
 	<meta name="author" content="Bill (Yuan Hong) Sun">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<link rel="stylesheet" href="styles.css">
 	<link rel="icon" type="image/png" href="logos/b.png" sizes="32x32">
-	<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
   	<script src="styles.js"></script>
 
 </head>
@@ -27,13 +26,13 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-		<a href="solarcar.html">Solar Car Racing Team</a>
-		<a href="ewb.html">Engineers Without Borders</a>
-		<a href="ilead.html">iLead The Game, University of Toronto</a>
-		<a href="fes.html">Future Engineers Society, Earl Haig Secondary School</a>
-		<a href="weather.html">Earth Sciences Hobby Research</a>
-		<a href="deep.html">DEEP Summer Academy, University of Toronto</a>
-		<a href="swim.html">Swimming and Lifeguarding</a>
+    	<a href="solarcar.html">Solar Car Racing Team</a>
+    	<a href="ewb.html">Engineers Without Borders</a>
+    	<a href="ilead.html">iLead The Game, University of Toronto</a>
+    	<a href="fes.html">Future Engineers Society, Earl Haig Secondary School</a>
+    	<a href="weather.html">Earth Sciences Hobby Research</a>
+    	<a href="deep.html">DEEP Summer Academy, University of Toronto</a>
+    	<a href="swim.html">Swimming and Lifeguarding</a>
     </div>
   </div> 
   <div class="dropdown">
@@ -41,19 +40,19 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-        <a href="https://github.com/billyhsun/MusicGenre">Music Genre Classifier</a>
-		<a href="https://github.com/billyhsun/Deep-Learning-Projects">Other Machine Learning Projects</a>
-		<a href="research.html">Transportation Modelling Research</a>
-		<a href="https://devpost.com/software/chinabridge">Content Hosting App</a>
-		<a href="https://devpost.com/software/surroundsound-1u9ljk">Music Sharing App</a>
-		<a href="game.html">Boxhead Video Game</a>
-		<a href="parking.html">Parking Manager App Simulator</a>
-		<a href="aer201.html">Autonomous Pill Packaging Machine</a>
-		<a href="praxis.html">ESC101/102 - Praxis I + II</a>
-		<a href="civ102.html">CIV102 - Structures and Materials</a>
+      <a href="https://github.com/billyhsun/MusicGenre">Music Genre Classifier</a>
+	<a href="https://github.com/billyhsun/Deep-Learning-Projects">Other Machine Learning Projects</a>
+	<a href="research.html">Transportation Modelling Research</a>
+    	<a href="https://devpost.com/software/chinabridge">Content Hosting App</a>
+    	<a href="https://devpost.com/software/surroundsound-1u9ljk">Music Sharing App</a>
+    	<a href="game.html">Boxhead Video Game</a>
+    	<a href="parking.html">Parking Manager App Simulator</a>
+    	<a href="aer201.html">Autonomous Pill Packaging Machine</a>
+    	<a href="praxis.html">ESC101/102 - Praxis I + II</a>
+    	<a href="civ102.html">CIV102 - Structures and Materials</a>
     </div>
   </div>
-  <div class="button"><a href="overview.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">About Me</a></div>
+    <div class="button"><a href="overview.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">About Me</a></div>
     <div class="logo"><h1 style="margin:1px;">
   	<a href="index.html" style="text-decoration: none;">bill.</a></h1>
   </div>
@@ -69,6 +68,7 @@
 <h1 style="text-align:center;">About Me</h1><br>
 
 <h2 id="skills" style="text-align:center;">Skills Summary</h2>
+
 <style>
 box{
      font-size: 15px; 
@@ -77,7 +77,6 @@ box{
      height: 29px;
      text-align: center;
 }
-
 p{
 	color: white;
 }
@@ -91,41 +90,95 @@ h3{
 	color: white;
 }
 </style>
-<br>
 
-<p><b>○ Software: </b>  
-<img src="logos/python.png" alt="Python" width=50>
-<img src="logos/java.png" alt="Python" width=50>
-<img src="logos/c.png" alt="Python" width=50>
-<img src="logos/cpp.png" alt="Python" width=50>
-<img src="logos/js.png" alt="Python" width=50>
-<img src="logos/nodejs.png" alt="Python" width=50>
-<img src="logos/html.png" alt="Python" width=50>
-<img src="logos/css3.png" alt="Python" width=50>
-<img src="logos/css.png" alt="Python" width=50>
-</p>
 
-<!--#3bf934, #ffff0f-->
-<p><b>○ Data Analysis:</b>	<box style="color:white;background-color:#01700c">Microsoft Excel</box> 
-					<box style="color:white;background-color:#01700c">MATLAB</box>
-					<box style="color:white;background-color:#01700c">SAS</box> 
-					<box style="color:white;background-color:#01700c">SQL</box> 
-					<box style="color:white;background-color:#01700c">AWS (Amazon Web Services)</box> 
-					<box style="color:white;background-color:#01700c">Google Cloud</box> 
+<!--
 
-<p><b>○ Engineering Design:</b> <box style="color:white;background-color:#01700c">Engineering Design Process</box>
-				<box style="color:white;background-color:#01700c">Prototyping</box>
-				<box style="color:white;background-color:#01700c">Agile Methodology</box>
-				<box style="color:white;background-color:#01700c">Testing Protocols</box>
+<p><b>Software: </b></p> 
+<i class="fab fa-python fa-3x" style="color:#FFFFFF; margin:5px"></i>
+<i class="fab fa-java fa-3x" style="color:#FFFFFF; margin:5px"></i>
+<i><img src="logos/c.png" alt="Python" width=42 style="margin:0px 5px"></i>
+<i><img src="logos/cpp.png" alt="Python" width=42 style="margin:0px 5px"></i>
+<i class="fab fa-js-square fa-3x" style="color:#FFFFFF; margin:5px"></i>
+<i class="fab fa-node-js fa-3x" style="color:#FFFFFF; margin:5px"></i>
+<i class="fab fa-html5 fa-3x" style="color:#FFFFFF; margin:5px"></i>
+<i class="fab fa-css3 fa-3x" style="color:#FFFFFF; margin:5px"></i>
 
-<p><b>○ Leadership:</b> <box style="color:white;background-color:#01700c">Organization</box>
-			<box style="color:white;background-color:#01700c">Time Management</box>
-			<box style="color:white;background-color:#01700c">Teamwork</box>
-			<box style="color:white;background-color:#01700c">Communication</box>
-			<box style="color:white;background-color:#01700c">Mentoring</box>
 
+<p><b>Other Technologies:</b></p> 
+<i class="fas fa-database fa-3x" style="color:#FFFFFF; margin:5px"></i>
+<i class="fab fa-aws fa-3x" style="color:#FFFFFF; margin:5px"></i>
+<i><img src="logos/google-cloud.png" alt="Python" width=50 style="margin:0px 5px"></i>
+<i class="fab fa-linux fa-3x" style="color:#FFFFFF; margin:5px"></i>
+<i class="fab fa-android fa-3x" style="color:#FFFFFF; margin:5px"></i>
+<i class="fab fa-react fa-3x" style="color:#FFFFFF; margin:5px"></i>
+<i><img src="logos/matlab.png" alt="Python" width=45 style="margin:0px 5px"></i>
+<i><img src="logos/excel.png" alt="Python" width=45 style="margin:0px 5px"></i>
+
+<p><b>Leadership:</b> <box style="color:white;background-color:#01700c">Engineering Design Process</box>
+        <box style="color:white;background-color:#01700c">Agile Methodology</box>
+        <box style="color:white;background-color:#01700c">Organization</box>
+        <box style="color:white;background-color:#01700c">Time Management</box>
+        <box style="color:white;background-color:#01700c">Teamwork</box>
+        <box style="color:white;background-color:#01700c">Communication</box>
+        <box style="color:white;background-color:#01700c">Mentoring</box></p>
+
+-->
+<table style="width:100%">
+  <tr>
+    <th><h3>Programming</h3></th>
+    <th><h3>Other Technologies</h3></th> 
+    <th><h3>Engineering & Leadership</h3></th>
+  </tr>
+  <tr>
+    <td><i class="fab fa-python fa-3x" style="color:#FFFFFF; margin:5px"></i></td>
+    <td><i class="fas fa-database fa-3x" style="color:#FFFFFF; margin:5px"></i></td>
+    <td><p><b>Engineering Design Process</b></p></td>
+  </tr>
+  <tr>
+    <td><i class="fab fa-java fa-3x" style="color:#FFFFFF; margin:5px"></i></td>
+    <td><i class="fab fa-aws fa-3x" style="color:#FFFFFF; margin:5px"></i></td>
+    <td><p><b>Agile Methodology</b></p></td>
+  </tr>
+  <tr>
+    <td><i><img src="logos/c.png" alt="Python" width=42 style="margin:5px"></i></td>
+    <td><i><img src="logos/google-cloud.png" alt="Python" width=50 style="margin:0px 5px"></i></td>
+    <td><p><b>Software Development Cycle</b></p></td>
+  </tr>
+  <tr>
+    <td><i><img src="logos/cpp.png" alt="Python" width=42 style="margin:5px"></i></td>
+    <td><i class="fab fa-linux fa-3x" style="color:#FFFFFF; margin:5px"></i></td>
+    <td><p><b>DevOps</b></p></td>
+  </tr>
+  <tr>
+    <td><i class="fab fa-node-js fa-3x" style="color:#FFFFFF; margin:5px"></i></td>
+    <td><i class="fab fa-react fa-3x" style="color:#FFFFFF; margin:5px"></i></td>
+    <td><p><b>Event Organization</b></p></td>
+  </tr>
+  <tr>
+    <td><i class="fab fa-js-square fa-3x" style="color:#FFFFFF; margin:5px"></i></td>
+    <td><i><img src="logos/excel.png" alt="Python" width=45 style="margin:0px 5px"></i></td>
+    <td><p><b>Teamwork</b></p></td>
+  </tr>
+  <tr>
+    <td><i class="fab fa-html5 fa-3x" style="color:#FFFFFF; margin:5px"></i></td>
+    <td><i><img src="logos/tensorflow.png" alt="Python" width=45 style="margin:0px 5px"></i></td>
+    <td><p><b>Project Management</b></p></td>
+  </tr>
+  <tr>
+    <td><i class="fab fa-css3 fa-3x" style="color:#FFFFFF; margin:5px"></i></td>
+    <td><i><img src="logos/pytorch.png" alt="Python" width=45 style="margin:0px 5px"></i></td>
+    <td><p><b>Public Speaking</b></p></td>
+  </tr>
+  <tr>
+    <td><i><img src="logos/matlab.png" alt="Python" width=45 style="margin:0px 5px"></i></td>
+    <td><i><img src="logos/keras.png" alt="Python" width=45 style="margin:0px 5px"></i></td>
+    <td><p><b>Mentoring</b></p></td>
+  </tr>
+</table>
 <br> 
 </div>
+
 <div style="padding: 0% 10% 0% 10%; margin-top:50px; min-height:700px;">
 
 <h2 id="exp" style="text-align:center;">Experience Highlight</h2>
